# opengl_learn

./: 1.frag  1.vert  CMakeLists.txt  main.cpp
resources/: 1.frag  1.vert
test/: CMakeLists.txt  test_assimp.cpp  test_assimp_before.cpp  test_main.cpp  test_sun.cpp
test/test_resources/: assimp.frag  assimp.vert  before_1.frag  before_1.vert  material.frag  t1.frag  t1.vert  t2.frag  t2.vert
test/test_tools/: CMakeLists.txt  Info.hpp  MyCamera.cpp  MyCamera.hpp  MyMesh.cpp  MyMesh.hpp  MyModel.cpp  MyModel.hpp  MyShader.cpp  MyShader.hpp  ObjectDef.hpp
tools/: CMakeLists.txt  Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp
